--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.title{
+  color: black;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
