--- a/src/components/items.css
+++ b/src/components/items.css
@@ -1,17 +1,40 @@
 .item{
     width: 350px;
+    height:500px;
+    border: 1px solid #dbdbdb;
+    border-radius: 0 0 10px 10px;
+    flex-basis: 25%;
+    flex-grow: 1;
 }
 .item p{
     margin: 6px 0px;
 }
 
-.item-prices{
+.item-price{
     display:flex;
     gap:20px;
     color:rgb(238, 119, 119);
     font-weight:600;
 }
-.item:hover{
-   transform: scale(1.05); 
-   transition:0.6s ;
+.item-name{
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: capitalize;
+    text-align: start;
+}
+.item:hover .img-box img{
+   transform: scale(1.1); 
+}
+.item img{
+    width:100%;
+    transition:1s ;
+    /* border-radius: 10px; */
+}
+.img-box{
+    height: 80%;
+    overflow: hidden;
+}
+.content-box{
+    padding: 10px;
+    border-top: 1px solid #dbdbdb;
 }
