--- a/src/components/items.css
+++ b/src/components/items.css
@@ -3,8 +3,9 @@
     height:500px;
     border: 1px solid #dbdbdb;
     border-radius: 0 0 10px 10px;
-    flex-basis: 25%;
-    flex-grow: 1;
+    flex-basis: 22%;
+    justify-content: center;
+    /* flex-grow: 1; */
 }
 .item p{
     margin: 6px 0px;
